@@ -1,5 +1,18 @@
-META.yml
-Makefile
-inc/
-pm_to_blib
 *~
+*.bak
+.DS_Store
+.build/
+
+blib*
+Makefile
+Makefile.old
+META.yml
+Build
+_build*
+pm_to_blib*
+*.tar.gz
+.lwpcookies
+cover_db
+
+YellowBot-API-*
+dev_*
