@@ -1,0 +1,37 @@
+name    = HTML-Mason-PSGIHandler
+author  = Ask Bjørn Hansen <ask@develooper.com>
+license = Perl_5
+copyright_holder = Ask Bjørn Hansen
+copyright_year   = 2010
+
+[Prereq]
+CGI::PSGI    = 0
+HTML::Mason  = 0
+
+[Prereqs / TestRequires ]
+Test::More   = 0
+Plack::Test  = 0
+
+[@Git]
+# push_to    = all
+
+[@Filter]
+bundle = @Basic
+remove = Readme
+remove = Manifest
+
+[Repository]
+[Homepage]
+[BumpVersionFromGit]
+[PkgVersion]
+
+[CheckChangeLog]
+[CompileTests]
+[DistManifestTests]
+[HasVersionTests]
+[MetaTests]
+[Manifest]
+
+[NextRelease]
+format = %-6v %{MMMM d, yyyy}d
+
