@@ -1,4 +1,7 @@
 Revision history for Perl extension HTML::Mason::PSGIHandler
 
+{{$NEXT}}
+      - First public release
+
 0.01  Wed Sep 30 21:50:16 2009
-        - original version
+      - original version
